--- a/index.html
+++ b/index.html
@@ -24,9 +24,10 @@
     <label for="calcular">Insira o valor:</label>
       <input id="calcular">
       <button onclick="shownumber()" id="acharnumero" type="button">Chutar</button>
-   </section>
-   <p> O resultado esta :</p>
+   
+   <p id="resultado"> Resultado :</p>
    <p id="tentativas"> Voce ainda tem : 10 chances</p>
+</section>
 </body>
 </html>
 <!--
