--- a/index.html
+++ b/index.html
@@ -21,12 +21,12 @@
     </ul>
    </section>
    <section id="jogo">
-    <label for="calcular">Insira o valor:</label>
+    <label for="calcular">Insira um numero inteiro:</label>
       <input id="calcular">
       <button onclick="shownumber()" id="acharnumero" type="button">Chutar</button>
    
    <p id="resultado"> Resultado :</p>
-   <p id="tentativas"> Voce ainda tem : 10 chances</p>
+   <p id="tentativas"> Voce ainda tem : 15 chances</p>
 </section>
 </body>
 </html>
